--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "by-the-book",
-  "version": "0.0.0",
+  "version": "0.2.0",
+  "engines": {
+    "node": "9.3.0",
+    "npm": "5.5.1"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
