--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.18.2",
     "connect-flash": "^0.1.1",
     "connect-flash-plus": "^0.2.1",
@@ -20,6 +21,7 @@
     "ejs-lint": "^0.3.0",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
+    "express-validator": "^5.0.3",
     "mongoose": "^5.0.2",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
