--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.4.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "stripe": "^5.5.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.1"
