--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^5.0.3",
     "mongoose": "^5.0.2",
     "morgan": "~1.9.0",
+    "nodemailer": "^4.6.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.4.0",
